// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<td
  className="td"
  style={
    Object {
      "left": undefined,
      "right": undefined,
    }
  }
>
  cell content
</td>
`;

exports[`renders correctly when sticky and with shadows 1`] = `
<td
  className="td columnSticky columnStickyShadow"
  style={
    Object {
      "left": 120,
      "right": 120,
    }
  }
>
  cell content
</td>
`;

exports[`renders correctly with colSpan and rowSpan 1`] = `
<td
  className="td"
  colSpan={3}
  rowSpan={2}
  style={
    Object {
      "left": undefined,
      "right": undefined,
    }
  }
>
  cell content
</td>
`;
